# shanketikBhasa

./: .gitignore
backend/: CNN.py  pyproject.toml  pytest.ini  requirements.txt  sign_language_model.keras
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  course.py  prediction.py
backend/tests/: conftest.py  test_main.py
