[project]
name = "backed-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "keras>=3.13.0",
    "numpy>=2.4.0",
    "passlib[argon2]>=1.7.4",
    "protobuf>=6.33.2",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pymysql>=1.1.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "tensorflow>=2.20.0",
    "uvicorn[standard]>=0.40.0",
]
